Fix z-index for the canvas

--- a/styles/components/_canvas.css
+++ b/styles/components/_canvas.css
@@ -1,5 +1,7 @@
-canvas{
-    z-index: -1;
- 
+canvas {
+  z-index: 1;
 }
 
+#ScrollRig-canvas {
+  z-index: 1;
+}
